force-app/main/default/objects/PS_Country_Map__c.object
<CustomObject>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Salesforce Country Picklist Country Code</description>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>Salesforce Country Picklist Name</description>
        <label>Country Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Value__c</fullName>
        <description>Salesforce Country Picklist Integration Value</description>
        <label>Integration Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Country_Code__c</fullName>
        <description>Code from PeopleSoft Country table</description>
        <externalId>true</externalId>
        <label>PS Country Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <description>Mapping rules for PeopleSoft country field to Salesforce Country Picklist</description>
    <label>PS Country Map</label>
    <nameField>
        <label>PS Country</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS Country Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>PS_Country_Code__c</columns>
        <columns>NAME</columns>
        <columns>Country_Code__c</columns>
        <columns>Country_Name__c</columns>
        <columns>Integration_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>