force-app/main/default/objects/PS_Country_Map__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PS_Country_Code__c</columns>
    <columns>NAME</columns>
    <columns>Country_Code__c</columns>
    <columns>Country_Name__c</columns>
    <columns>Integration_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>